--- a/06_JSON_Processing/web/index.html
+++ b/06_JSON_Processing/web/index.html
@@ -106,7 +106,7 @@
             method: "post",
             data: data,
             success: function (resp) {
-                alert("Customer Added");
+                alert(resp);
                 console.log(resp);
                 loadAllCustomers()
             },
