refactor doGet Method in customerServlet

--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -470,8 +470,8 @@
             $.ajax({
                 url: "http://localhost:8081/10_BackEnd/customer",
                 method: 'GET',
-
                 success :function (resp){
+                    alert("ok");
                     console.log(resp);
                 },
                 error: function (xhr){
