--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -467,17 +467,23 @@
 
 
     $("#btnGetAll").click(function () {
-            $.ajax({
-                url: "http://localhost:8081/10_BackEnd/customer",
-                method: 'GET',
-                success :function (resp){
-                    alert("ok");
-                    console.log(resp);
-                },
-                error: function (xhr){
-                    console.log(xhr);
+        $.ajax({
+            url: "http://localhost:8081/10_BackEnd/customer",
+            method: 'GET',
+            dataType:'json',
+            success: function (resp) {
+                alert(resp.message);
+                console.log(resp.data);
+
+                for (const i of resp.data) {
+                    let row=`<tr><td>${i.id}</td><td>${i.name}</td><td>${i.address}</td><td>${i.salary}</td></tr>`;
+                    $("#tblCustomer").append(row);
                 }
-            });
+            },
+            error: function (xhr) {
+                console.log(xhr);
+            }
+        });
     });
 
 </script>
