refactor post method

--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -105,7 +105,7 @@
                     <span class="control-error" id="lblcussalary"></span>
                 </div>
                 <div class="btn-group">
-                    <button class="btn btn-primary" id="btnCustomer" type="button">Save Customer</button>
+                    <button class="btn btn-primary" id="btnCusSave" type="button">Save Customer</button>
                     <button class="btn btn-danger" id="btnCusDelete" type="button">Remove</button>
                     <button class="btn btn-warning" id="btnUpdate" type="button">Update</button>
                     <button class="btn btn-success" id="btnGetAll" type="button">Get All</button>
