--- a/09_FrontEnd/index.html
+++ b/09_FrontEnd/index.html
@@ -101,7 +101,7 @@
     });
 
     $("#btnSave").click(function () {
-
+        let customerID = $("#txtCustomerID").val();
         let data = $("#customerForm").serialize();
         $.ajax({
             url: BASE_URL + "customer",
