create item servlet class

--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -463,10 +463,10 @@
     });
 
 
-
 </script>
 
 <script src="controllers/CustomerController.js"></script>
+<script src="controllers/ItemController.js"></script>
 <!--
 <script src="db/db.js"></script>
 <script src="models/Customer.js"></script>
