refactor item servlet

--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -158,7 +158,7 @@
                     <span class="control-error" id="lblprice"></span>
                 </div>
                 <div class="btn-group">
-                    <button class="btn btn-primary" id="btnItem" type="button">Add Item</button>
+                    <button class="btn btn-primary" id="btnSaveItem" type="button">Add Item</button>
                     <button class="btn btn-danger" id="btnItemDelete" type="button">Remove</button>
                     <button class="btn btn-warning" id="btnItemUpdate" type="button">Update</button>
                     <button class="btn btn-success" id="itemGetAll" type="button">Get All</button>
