--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -467,6 +467,7 @@
 
 <script src="controllers/CustomerController.js"></script>
 <script src="controllers/ItemController.js"></script>
+<script src="controllers/PlaceOrderController.js"></script>
 <!--
 <script src="db/db.js"></script>
 <script src="models/Customer.js"></script>
